--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <title>Raphael</title>
 </head>
 <body>
+    <div class = "title">
+        <hi>Kaleidos Group</hi>
     <div class="headingg">
         <h1>The History of Raphael</h1>
     </div>
     <div>
         <h3>/*/write the description of/*/</h3>
     </div>
+    <div class = "heading">
+        <hi>Our Goal</hi>
+    </div>
+    <div class="heading">
 </body>
 </html>
+
 
