--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>Raphael</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            
+        </ul>
+    </nav>
     <div class = "title">
         <hi>Kaleidos Group</hi>
-    <div class="headingg">
+    <div class="heading">
         <h1>The History of Raphael</h1>
     </div>
     <div>
@@ -20,5 +25,6 @@
     <div class="heading">
 </body>
 </html>
+
 
 
