--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raphael</title>
 </head>
-<body>
+<body class = "body-color">
     <nav>
         <ul>
             
@@ -25,6 +25,7 @@
     <div class="heading">
 </body>
 </html>
+
 
 
 
