--- a/navbar.html
+++ b/navbar.html
@@ -11,7 +11,7 @@
 <body>
     <nav class = "navigation">
         <a href="index.html" class="logo">
-            <img src="images/Kaliedoslogo.jpeg" width="50" height="50" alt = "home" class="nav-logo">
+            <img src="images/kaleidoslogo.jpeg" width="50" height="50" alt = "home" class="nav-logo">
         </a>
         <a href="about.html" class="a-text">About Us</a>
         <a href="mission.html" class="a-text">Our Mission</a>
