added gradients, new textbox for content on the bottom, altered navbar color to fit with color scheme.

--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
         <div class="subtext">raphael nanum</div>
     </div>
 
+<!-- An introduction? -->
+
+
+<div class="container">
+    <img src="images/myeongdongcathedral.jpg" alt="myongdongcathedral" class="introimage">
+    <div class="text box">
+        <h1>A Brief Introduction</h1>
+        <h3>We are a voluntary group....blahblahblah.......end</h3>
+    </div>
+</div>
+
+
 </body>
 </html>
